fix title wrapping issue

--- a/connect4.css
+++ b/connect4.css
@@ -69,7 +69,6 @@
 	top: 20%;
 	background: yellow;
 	margin-bottom: 50px;
-
 	box-shadow: 0px 15px 2px rgb(4, 4, 138);
 }
 
@@ -106,7 +105,7 @@ h3 {
 h2 {
 	width: 25vw;
 	display: flex;
-	flex-wrap: wrap-reverse;
+	flex-wrap: none;
 	justify-content: space-evenly;
 	align-items: center;
 	margin-bottom: 0;
